// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accepts and ignores a null child 1`] = `
<div>
  <div
    class="mtfh-sidebar"
  >
    <div
      class="govuk-accordion lbh-accordion"
      data-attribute="value"
      id="sidebar"
    >
      <div
        class="govuk-accordion__controls"
      >
        <button
          aria-expanded="false"
          class="govuk-accordion__open-all"
          type="button"
        >
          Open all
          <span
            class="govuk-visually-hidden"
          >
             sections
          </span>
        </button>
      </div>
      <div
        class="govuk-accordion__section"
      >
        <div
          class="govuk-accordion__section-header"
        >
          <h3
            class="lbh-heading-h5 govuk-accordion__section-heading"
          >
            <button
              aria-controls="sidebar-content-1"
              aria-expanded="false"
              class="govuk-accordion__section-button"
              id="accordion-heading-section-1"
              type="button"
            >
              More Details
              <span
                aria-hidden="true"
                class="govuk-accordion__icon"
              />
            </button>
          </h3>
        </div>
        <div
          aria-labelledby="accordion-heading-section-1"
          class="govuk-accordion__section-content"
          id="accordion-content-section-1"
        >
          <div>
            Content
          </div>
        </div>
      </div>
      <div
        class="govuk-accordion__section"
      >
        <div
          class="govuk-accordion__section-header"
        >
          <h3
            class="lbh-heading-h5 govuk-accordion__section-heading"
          >
            <button
              aria-controls="sidebar-content-2"
              aria-expanded="false"
              class="govuk-accordion__section-button"
              id="accordion-heading-section-2"
              type="button"
            >
              More Details 2
              <span
                aria-hidden="true"
                class="govuk-accordion__icon"
              />
            </button>
          </h3>
        </div>
        <div
          aria-labelledby="accordion-heading-section-2"
          class="govuk-accordion__section-content"
          id="accordion-content-section-2"
        >
          <div>
            Content 2
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`it renders correctly on desktop 1`] = `
<div>
  <div
    class="mtfh-sidebar"
  >
    <div
      id="sidebar"
    >
      <div
        class="mtfh-sidebar-section"
        id="section-1"
        title="More Details"
      >
        <div>
          Content
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`it renders correctly on mobile 1`] = `
<div>
  <div
    class="mtfh-sidebar"
  >
    <div
      class="govuk-accordion lbh-accordion"
      data-attribute="value"
      id="sidebar"
    >
      <div
        class="govuk-accordion__controls"
      >
        <button
          aria-expanded="false"
          class="govuk-accordion__open-all"
          type="button"
        >
          Open all
          <span
            class="govuk-visually-hidden"
          >
             sections
          </span>
        </button>
      </div>
      <div
        class="govuk-accordion__section"
      >
        <div
          class="govuk-accordion__section-header"
        >
          <h3
            class="lbh-heading-h5 govuk-accordion__section-heading"
          >
            <button
              aria-controls="sidebar-content-1"
              aria-expanded="false"
              class="govuk-accordion__section-button"
              id="accordion-heading-section-1"
              type="button"
            >
              More Details
              <span
                aria-hidden="true"
                class="govuk-accordion__icon"
              />
            </button>
          </h3>
        </div>
        <div
          aria-labelledby="accordion-heading-section-1"
          class="govuk-accordion__section-content"
          id="accordion-content-section-1"
        >
          <div>
            Content
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
